Ticket #233: Fixed hover bug on iPhone, ability to hover after click.

--- a/themes/dimpact/scss/general/_toptaken.scss
+++ b/themes/dimpact/scss/general/_toptaken.scss
@@ -1,104 +1,94 @@
-$toptakentotal: 737px;
-$tabs: 267px;
-$buttons: ($toptakentotal - $tabs);
-
 .block-menu-menu-toptaken {
   border: 1px solid $background-color;
+
   ul {
     margin: 0;
     padding: 0;
     list-style: none;
-  }
-}
-.block-menu-menu-toptaken > ul > li {
-  @include font-size(14);
-  border-bottom: 1px solid #FFFFFF;
-  line-height: 1;
-  > a {
-    &.active {
-      color: #000;
-    }
-    font-family: $heading;
-    color: #000;
-    text-decoration: none;
-    display: block;
-    padding: 18px $gutter-width/2;
-  }
-  &.last {
-    border: 0;
-  }
-}
-.block-menu-menu-toptaken > ul > li > ul {
-  border-left: 0;
-  display: none;
-  height: 100%;
-  top: 0;
-  background-color: #fff;
-}
-html.no-js .block-menu-menu-toptaken > ul > li:hover {
-  > a {
-    background-image: url('../img/toptaken-arrow.png');
-    background-position: center right;
-    background-repeat: no-repeat;
-    margin-right: -9px;
-    z-index: 1;
-    position: relative;
-  }
-  > ul {
-    display: block;
-  }
-}
 
-html.no-js .block-menu-menu-toptaken > ul > li:hover,
-html.js .block-menu-menu-toptaken > ul > li.toptaken-active {
-  > a {
-    z-index: 1;
-    position: relative;
-  }
-  > ul {
-    display: block;
-  }
-}
+    ul {
+      height: 100%;
+      background-color: #fff;
+      top: 0;
+      display: none;
 
-@include at-breakpoint($break-medium) {
-  html.no-js .block-menu-menu-toptaken > ul > li:hover,
-  html.js .block-menu-menu-toptaken > ul > li.toptaken-active {
-    > a {
-      &:after {
-        left: 100%;
-        top: 50%;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
-        position: absolute;
-        pointer-events: none;
-        border-color: rgba(136, 183, 213, 0);
-        border-left-color: get_env_color('dtoptakencolor', $azure);
-        border-width: 15px;
-        margin-top: -15px;
+      li {
+        &:nth-child(2n) {
+          margin-right: 0;
+        }
       }
-    }
-  }
-}
 
-.block-menu-menu-toptaken > ul > li {
-  > ul {
-    > li {
-      &:nth-child(2n) {
-        margin-right: 0;
-      }
       a {
-        @include font-size(12);
-        display: block;
         padding: $gutter-width/2;
+        color: $text-color !important;
+        display: block;
+        @include font-size(12);
+
         img {
           margin: 0 $gutter-width/2 0 0;
         }
       }
     }
-    a {
-      color: $text-color !important;
+  }
+
+  > ul > li {
+    @include font-size(14);
+    line-height: 1;
+    border-bottom: 1px solid #fff;
+
+    &.last {
+      border: 0;
+    }
+
+    > a {
+      padding: 18px $gutter-width/2;
+      color: #000;
+      font-family: $heading;
+      text-decoration: none;
+      display: block;
+
+      &.active {
+        color: #000;
+      }
+    }
+
+    // Roundabout way for hover, circumvents iPhone hover bug while still
+    // keeping accessibility intact.
+    .no-touch &:hover,
+    html.no-js &:hover,
+    &:focus,
+    &.toptaken-active {
+      > a {
+        position: relative;
+        z-index: 10;
+
+        @include at-breakpoint($break-medium) {
+          &:after {
+            content: ' ';
+            width: 0;
+            height: 0;
+            margin-top: -15px;
+            border: 15px solid transparent;
+            border-left-color: get_env_color('dtoptakencolor', $azure);
+            position: absolute;
+            left: 100%;
+            top: 50%;
+            pointer-events: none;
+          }
+        }
+      }
+
+      ul {
+        display: block;
+        z-index: 1;
+      }
+    }
+
+    &:hover,
+    &:focus {
+      ul {
+        z-index: 2;
+      }
     }
   }
 }
